// file: proto/gcommon/v1/config/api/delete_config_request.proto
// version: 1.0.0
// guid: 6d17b97b-a8c2-4e72-83fb-0ca1ecb75daf
// file: proto/gcommon/v1/config/delete_config_request.proto
//
edition = "2023";

package config.v1;

import "common/v1/request_metadata.proto";
import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/config/";

/**
 * DeleteConfigRequest removes a configuration value.
 */
message DeleteConfigRequest {
  // Configuration key to delete
  string key = 1 [(buf.validate.field).string.min_len = 1];

  // Optional namespace/environment
  string namespace = 2 [(buf.validate.field).string.min_len = 1];

  // Request metadata
  common.v1.RequestMetadata metadata = 3;
}
