// file: proto/gcommon/v1/database/schema/drop_schema_request.proto
// version: 1.0.0
// guid: f4442e10-50d1-43f9-bc1b-468fb7e6bf3f

edition = "2023";

package database.v1;

import "commonpb/v1/request_metadata.proto";
import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/databasepb";

message DropSchemaRequest {
  // Database name containing the schema
  string database = 1 [(buf.validate.field).string.min_len = 1];

  // Name of the schema to drop
  string schema = 2 [(buf.validate.field).string.min_len = 1];

  // Request metadata for tracing and authentication
  common.v1.RequestMetadata metadata = 3 [lazy = true];
}
