// file: pkg/cache/proto/requests/delete_namespace_request.proto
// version: 1.0.0
// guid: 123e4567-e89b-12d3-a456-426614174014

edition = "2023";

package gcommon.v1.cache;

option go_package = "../../../../pkg/cache/proto;cachepb";

/**
 * Request to delete a cache namespace.
 */
message DeleteNamespaceRequest {
  // ID of the namespace to delete
  string namespace_id = 1;

  // Force deletion even if namespace contains data
  bool force = 2;

  // Create backup before deletion
  bool backup = 3;
}
