// file: pkg/config/proto/responses/watch_config_response.proto
edition = "2023";

package gcommon.v1.config;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";
import "pkg/config/proto/messages/config_entry.proto";
import "pkg/config/proto/enums/config_change_type.proto";

option go_package = "../../../../pb;configpb";
option features.(pb.go).api_level = API_HYBRID;

/**
 * WatchConfigResponse describes a configuration change event.
 */
message WatchConfigResponse {
  // Type of change
  ConfigChangeType change_type = 1;

  // Configuration entry
  ConfigEntry entry = 2;

  // Previous value for updates/deletes
  ConfigEntry previous_entry = 3;

  // Change timestamp
  google.protobuf.Timestamp timestamp = 4;
}
