// filepath: pkg/config/proto/requests/rollback_config_request.proto
// file: config/proto/requests/rollback_config_request.proto
//
// Request definitions for config module
// Generated as part of protobuf implementation
//
edition = "2023";

package gcommon.v1.config;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/jdfalk/gcommon/pkg/config/proto;configpb";
option features.(pb.go).api_level = API_OPAQUE;

/**
 * RollbackConfigRequest rolls back configuration to a previous version.
 */
message RollbackConfigRequest {
  // Version identifier to roll back to
  string version = 1;

  // Namespace/environment of the configuration
  string namespace = 2;

  // Request metadata
  gcommon.v1.common.RequestMetadata metadata = 3;
}
