// file: pkg/db/proto/services/transaction_service.proto
// version: 1.0.0
// guid: 48c127b3-f9fa-4a27-bdd8-a41127f3d449

edition = "2023";

package gcommon.v1.database;

import "google/protobuf/empty.proto";
import "google/protobuf/go_features.proto";
import "pkg/db/proto/proto/begin_transaction_response.proto";
import "pkg/db/proto/proto/rollback_transaction_request.proto";
import "pkg/db/proto/proto/transaction_status_response.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/db/proto;dbpb";

/**
 * TransactionService manages database transactions.
 */
service TransactionService {
  // Begin a new transaction
  rpc BeginTransaction(BeginTransactionRequest) returns (BeginTransactionResponse);

  // Commit the specified transaction
  rpc CommitTransaction(CommitTransactionRequest) returns (google.protobuf.Empty);

  // Roll back the specified transaction
  rpc RollbackTransaction(RollbackTransactionRequest) returns (google.protobuf.Empty);

  // Retrieve status information for a transaction
  rpc GetTransactionStatus(TransactionStatusRequest) returns (TransactionStatusResponse);
}
