// file: pkg/queue/proto/get_cluster_info_request.proto
// version: 1.0.0
// Request to get cluster information

edition = "2023";

package gcommon.v1.queue;

option go_package = "github.com/jdfalk/gcommon/pkg/queue/proto;queuepb";

// Request to get cluster information
message GetClusterInfoRequest {
  // Include node details
  bool include_nodes = 1;

  // Include performance metrics
  bool include_metrics = 2;

  // Include health status
  bool include_health = 3;

  // Include resource usage
  bool include_resources = 4;

  // Include topology information
  bool include_topology = 5;

  // Timeout for the operation (milliseconds)
  int32 timeout_ms = 6;
}
