// file: pkg/queue/proto/queue.proto
edition = "2023";

package gcommon.v1.queue;

import "google/protobuf/go_features.proto";

// Import existing files that work
import "pkg/queue/proto/requests/send_message_request.proto";
import "pkg/queue/proto/responses/send_message_response.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/queue/proto;queuepb";
option features.(pb.go).api_level = API_HYBRID;

// QueueService provides basic message queuing functionality
service QueueService {
  // Send a message to a queue
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}
