// file: queue/proto/requests/subscribe_request.proto
// version: 1.0.0
// guid: 6a573217-0297-4408-bcce-72b9172dd071

edition = "2023";

package gcommon.v1.queue;

import "google/protobuf/go_features.proto";
import "pkg/queue/proto/ack_level.proto";
import "pkg/queue/proto/delivery_configuration.proto";
import "pkg/queue/proto/delivery_mode.proto";
import "pkg/queue/proto/error_handling_config.proto";
import "pkg/queue/proto/message_filter_config.proto";
import "pkg/queue/proto/subscription_configuration.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/queue/proto";

message QueueSubscribeRequest {
  // Topic or queue to subscribe to
  string topic = 1;

  // Subscription name/identifier
  string subscription_name = 2;

  // Consumer group ID for coordinated consumption
  string consumer_group_id = 3;

  // Individual consumer ID
  string consumer_id = 4;

  // Subscription configuration
  SubscriptionConfiguration config = 5;

  // Message filtering criteria
  MessageFilterConfig filter_config = 6;

  // Delivery configuration
  DeliveryConfiguration delivery_config = 7;

  // Error handling configuration
  ErrorHandlingConfig error_handling = 8;

  // Subscription metadata
  map<string, string> metadata = 9;
}
