// file: pkg/queue/proto/subscribe_response.proto
// version: 1.0.0
// Response for queue subscription with messages

edition = "2023";

package gcommon.v1.queue;

option go_package = "github.com/jdfalk/gcommon/pkg/queue/queuepb";

import "pkg/queue/proto/message.proto";
import "pkg/queue/proto/partition_offset.proto";
import "pkg/queue/proto/connection_details.proto";

// Response for subscription requests
message SubscribeResponse {
  // Message data
  Message message = 1;

  // Partition assignment info
  PartitionOffset partition_offset = 2;

  // Connection details for streaming
  ConnectionDetails connection_details = 3;

  // Subscription ID
  string subscription_id = 4;

  // Error message if any
  string error = 5;
}
