// file: proto/gcommon/v1/config/api/watch_config_request.proto
// file: proto/gcommon/v1/config/api/watch_config_request.proto
//

edition = "2023";

package gcommon.v1.config.api;

import "google/protobuf/go_features.proto";
import "proto/gcommon/v1/common/api/request_metadata.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package gcommon.v1.config.api;

message WatchConfigRequest {
  // Key or key pattern to watch
  string key_pattern = 1;

  // Optional namespace/environment
  string namespace = 2;

  // Request metadata
  gcommon.v1.common.RequestMetadata metadata = 3;
}
