// file: proto/gcommon/v1/config/api/import_config_request.proto
// version: 1.0.0
// guid: 11934c0f-bfea-49e2-9b8a-5a9774e120cf
// file: proto/gcommon/v1/config/messages/import_config_request.proto
//
// Request definitions for config module
// Generated as part of protobuf implementation
//

edition = "2023";

package gcommon.v1.config;



import "google/protobuf/go_features.proto";
import "gcommon/v1/common/messages/request_metadata.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/config";

message ImportConfigRequest {
  // Namespace/environment for imported values
  string namespace = 1;

  // Serialized configuration content
  bytes content = 2;

  // Input format (e.g., JSON, YAML)
  string format = 3;

  // Request metadata
  gcommon.v1.common.RequestMetadata metadata = 4;
}
