// file: proto/gcommon/v1/config/api/reload_config_request.proto
// version: 1.0.0
// guid: 5d1ecbb6-f500-42a2-85a1-ee831ecb1936
// file: proto/gcommon/v1/config/messages/reload_config_request.proto
//
// Request definitions for config module
// Generated as part of protobuf implementation
//

edition = "2023";

package gcommon.v1.config;



import "google/protobuf/go_features.proto";
import "gcommon/v1/common/messages/request_metadata.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/config";

message ReloadConfigRequest {
  // Namespace to reload
  string namespace = 1;

  // Request metadata
  gcommon.v1.common.RequestMetadata metadata = 2;
}
