// file: proto/gcommon/v1/config/api/restore_config_request.proto
// version: 1.0.0
// guid: 02590a49-63a8-4dc3-8ad9-2604a2244f0c
// file: proto/gcommon/v1/config/messages/restore_config_request.proto
//
// Request definitions for config module
// Generated as part of protobuf implementation
//

edition = "2023";

package gcommon.v1.config;

import "gcommon/v1/common/messages/request_metadata.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "gcommon/sdks/go/gcommon/v1/config";

message RestoreConfigRequest {
  // Restore point identifier
  string restore_point_id = 1;

  // Namespace/environment to restore
  string namespace = 2;

  // Request metadata
  gcommon.v1.common.RequestMetadata metadata = 3;
}
