// file: proto/gcommon/v1/config/api/set_config_schema_request.proto
// file: proto/gcommon/v1/config/api/set_config_schema_request.proto
//
// Request definitions for config module
// Generated as part of protobuf implementation
//

edition = "2023";

package gcommon.v1.config.api;

import "google/protobuf/go_features.proto";
import "proto/gcommon/v1/common/messages/request_metadata.proto";
import "proto/gcommon/v1/config/v1/config_schema.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/proto/gcommon/v1/config/messages";

message SetConfigSchemaRequest {
  // Namespace the schema applies to
  string namespace = 1;

  // Schema definition
  ConfigSchema schema = 2;

  // Request metadata
  gcommon.v1.common.RequestMetadata metadata = 3;
}
