// file: proto/gcommon/v1/config/api/unwatch_config_request.proto
// version: 1.0.0
// guid: 4fb39ff9-1c85-43d6-9246-d2cc5683ce22
// file: proto/gcommon/v1/config/messages/unwatch_config_request.proto
//
// Request definitions for config module
// Generated as part of protobuf implementation
//

edition = "2023";

package gcommon.v1.config;

import "gcommon/v1/common/messages/request_metadata.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/v1/config";

message UnwatchConfigRequest {
  // Watch identifier returned by WatchConfigRequest
  string watch_id = 1;

  // Request metadata
  gcommon.v1.common.RequestMetadata metadata = 2;
}
