// file: proto/gcommon/v1/queue/queue_monitoring_service.proto
// version: 1.0.1
// guid: 63f72754-e7c0-40b6-a40d-29f3645d55fc

edition = "2023";

package queue.v1;

import "queue/v1/get_cluster_info_request.proto";
import "queue/v1/get_cluster_info_response.proto";
import "queue/v1/get_queue_health_request.proto";
import "queue/v1/get_queue_health_response.proto";
import "queue/v1/get_queue_stats_request.proto";
import "queue/v1/metrics_event.proto";
import "queue/v1/queue_stats_response.proto";
import "queue/v1/stream_metrics_request.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/queuepb";

service QueueMonitoringService {
  // Get information about the queue cluster
  rpc GetClusterInfo(GetClusterInfoRequest) returns (GetClusterInfoResponse);

  // Get health status of all queues
  rpc GetQueueHealth(GetQueueHealthRequest) returns (GetQueueHealthResponse);

  // Get detailed statistics for a specific queue
  rpc GetQueueStats(GetQueueStatsRequest) returns (QueueStatsResponse);

  // Get real-time metrics stream
  rpc StreamMetrics(QueueStreamMetricsRequest) returns (stream MetricsEvent);
}
